--- a/ThirdLibrarys/QRScan/src/main/res/values/attrs.xml
+++ b/ThirdLibrarys/QRScan/src/main/res/values/attrs.xml
@@ -9,6 +9,13 @@
         <attr name="qrcv_cornerLength" format="dimension|reference" />
         <!-- 扫描框边角线的颜色，默认值为@android:color/white -->
         <attr name="qrcv_cornerColor" format="color|reference" />
+        <!-- 扫描框边角线显示位置(相对于边框)，默认值为中间 -->
+        <attr name="qrcv_cornerDisplayType">
+            <enum name="center" value="1" />
+            <enum name="inside" value="2" />
+        </attr>
+        <!-- 扫描框中心点在屏幕垂直方向的比例，当设置此值时，会忽略 qrcv_topOffset -->
+        <attr name="qrcv_verticalBias" format="float" />
         <!-- 扫描框的宽度，默认值为200dp -->
         <attr name="qrcv_rectWidth" format="dimension|reference" />
         <!-- 条码扫样式描框的高度，默认值为140dp -->
@@ -63,5 +70,7 @@
         <attr name="qrcv_customGridScanLineDrawable" format="reference" />
         <!-- 是否只识别扫描框区域的二维码，默认值为false -->
         <attr name="qrcv_isOnlyDecodeScanBoxArea" format="boolean" />
+        <!-- 是否显示定位点，默认值为false -->
+        <attr name="qrcv_isShowLocationPoint" format="boolean" />
     </declare-styleable>
 </resources>
