--- a/WanAndroid/src/main/res/layout/item_main_head.xml
+++ b/WanAndroid/src/main/res/layout/item_main_head.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingTop="16dp">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="48dp"
-        android:layout_height="48dp"
-        app:srcCompat="@drawable/bg_team_label" />
+        android:layout_height="48dp" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:paddingTop="@dimen/dp_10"
         android:layout_height="wrap_content"
         android:textSize="@dimen/sp_12"
-        android:text="TextView" />
+        tools:text="TextView" />
 </LinearLayout>
