实现多媒体控件预览和选择图片； 升级融云到2.9.3； 修复bug。

--- a/WanAndroid/src/main/res/values/attr.xml
+++ b/WanAndroid/src/main/res/values/attr.xml
@@ -2,5 +2,8 @@
 <resources>
     <attr name="app_primary_color" format="color" /> <!-- topbar -->
     <attr name="app_content_bg_color" format="color" /> <!-- content-->
-
+    <!-- 标点转换 -->
+    <declare-styleable name="AlignTextView">
+        <attr name="punctuationConvert" format="boolean" />
+    </declare-styleable>
 </resources>
