--- a/WanAndroid/src/main/res/layout/activity_meiwen.xml
+++ b/WanAndroid/src/main/res/layout/activity_meiwen.xml
@@ -66,13 +66,15 @@
                 tools:text="作者：刘震云" />
 
 
-            <TextView
+            <com.android.tomflying.widget.AlignTextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="@dimen/sp_14"
                 android:paddingRight="@dimen/sp_14"
+                android:paddingBottom="@dimen/dp_40"
                 android:lineSpacingExtra="3dp"
                 android:lineSpacingMultiplier="1.3"
+                app:punctuationConvert="false"
                 android:textSize="@dimen/sp_14"
                 android:id="@+id/tv_content"
                 tools:text="刘震云" />
