--- a/WanAndroid/src/main/res/layout/fragment_user.xml
+++ b/WanAndroid/src/main/res/layout/fragment_user.xml
@@ -36,7 +36,7 @@
                     android:scaleType="centerCrop" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
@@ -53,9 +53,10 @@
 
                     <TextView
                         android:id="@+id/tv_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingTop="8dp"
+                        android:gravity="center"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_12" />
                 </LinearLayout>
