--- a/WanAndroid/src/main/res/layout/fragment_project.xml
+++ b/WanAndroid/src/main/res/layout/fragment_project.xml
@@ -30,4 +30,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabSegment" />
+
+    <com.qmuiteam.tom.widget.QMUIEmptyView
+        android:id="@+id/mEmptyView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
