--- a/WelfarePlayer/src/main/res/layout/item_category.xml
+++ b/WelfarePlayer/src/main/res/layout/item_category.xml
@@ -7,6 +7,11 @@
     <TextView
         android:id="@+id/tv_cate_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" />
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
