--- a/WelfarePlayer/src/main/res/layout/fragment_more.xml
+++ b/WelfarePlayer/src/main/res/layout/fragment_more.xml
@@ -335,7 +335,7 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/ll_pay"
+                        android:id="@+id/ll_clean"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
@@ -349,7 +349,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="赏杯咖啡"
+                            android:text="清除缓存"
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp" />
 
